--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-swipeable-views": "^0.14.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
